# UniCollab

./: .env  .gitignore  cli.py  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
cli/: Dockerfile  UnicollabProject_cli.py  main.py  project_client.py  requirements.txt  user_client.py
nginx/: nginx.conf
project-service/: .coverage  .env  .gitignore  Dockerfile  api.py  data.json  pre-commit.txt  project-deployment.yaml  project-service.yaml  pyproject.toml  requirements.txt
project-service/.github/workflows/: ci.yml
project-service/app/api/: api.py
project-service/app/api/v1/: project_endpoints.py
project-service/app/models/: project.py
project-service/app/patterns/: observer.py  project_factory.py
project-service/app/services/: mongo_storage.py  observer.py  project_factory.py  project_service.py  storage.py
project-service/app/storage/: json_storage.py  mongo_singleton.py  storage_interface.py
project-service/cli/: project_cli.py
project-service/data/: projects.json
project-service/test/: test_observer.py  test_project_service_integration.py  test_project_service_unit.py
user-service/:  seed_users.py  .env  Dockerfile  README.md  app.py  config.py  database.py  docker-compose.yml  requirements.txt  seed_users.py
user-service/ models/: user.py
user-service/models/: user.py
user-service/nginx/: nginx.conf
user-service/routes/: auth.py
user-service/services/: user_service.py
user-service/tests/: test_auth.py
user-service/tests/integration/: test_auth_routes.py
user-service/tests/unit/: test_user_service.py
